// Autogenerated by:
// ../../src/tools/ftrace_proto_gen/ftrace_proto_gen.cc
// Do not edit.

syntax = "proto2";
package perfetto.protos;

message DpuTracingMarkWriteFtraceEvent {
  optional int32 pid = 1;
  optional string trace_name = 2;
  optional uint32 trace_begin = 3;
  optional string name = 4;
  optional uint32 type = 5;
  optional int32 value = 6;
}
message DpuDsiCmdFifoStatusFtraceEvent {
  optional uint32 header = 1;
  optional uint32 payload = 2;
}
message DpuDsiRxFtraceEvent {
  optional uint32 cmd = 1;
  optional bytes rx_buf = 3;
}
message DpuDsiTxFtraceEvent {
  optional uint32 type = 1;
  optional uint32 last = 3;
  optional uint32 delay_ms = 4;
  optional bytes tx_buf = 5;
}
message DpuDispDpuUnderrunFtraceEvent {
  optional int32 id = 1;
  optional int32 frames_pending = 2;
  optional int32 vsync_count = 3;
}
message DpuDispVblankIrqEnableFtraceEvent {
  optional int32 id = 1;
  optional int32 output_id = 2;
  optional int32 enable = 3;
}
message DpuDispFrameDoneTimeoutFtraceEvent {
  optional int32 display_id = 1;
  optional uint32 output_id = 2;
  optional int32 frames_pending = 3;
  optional int32 te_count = 4;
  optional uint32 during_disable = 5;
}
message DpuDispFrameStartTimeoutFtraceEvent {
  optional int32 display_id = 1;
  optional uint32 output_id = 2;
  optional int32 frames_pending = 3;
  optional int32 te_count = 4;
}
